--- a/index.html
+++ b/index.html
@@ -40,19 +40,14 @@
   </head>
   <body style="margin: 0;">
 
-<!--<div style="position: absolute; top: 0px; width: 100%; height: 140px; background: linear-gradient(#8000ff,#ffffff);">-->
-<div style="position: absolute; top: 0px; width: 100%; height: 140px;"> <!-- background: linear-gradient(#8000ff,#ffffff);">-->
+<div style="position: absolute; top: 0px; width: 100%; height: 140px;">
 
    <h1><strong>Audovia</strong></h1>
-    <!-- <h2><em>database application for making music using JFugue MusicStrings</em></h2> -->
     <div style="position: relative; top: -14px;">
     <h2><em>Linux application for making music</em></h2>
     </div>
 
     <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
-             <!-- <a href="https://uappexplorer.com/app/audovia.songbuilder" target="_blank"> <img title="Audovia on uApp Explorer"
-                alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
-                style="border: 0px solid;"></a> -->
                 <img title="Audovia Icon"
 				                alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
                 style="border: 0px solid;">
@@ -65,25 +60,16 @@
     <a href="index.html" style="text-decoration:none;"><b>Home</b></a>&nbsp;&nbsp;&nbsp;
     <a href="demo.html" style="text-decoration:none;">Demo</a>&nbsp;&nbsp;&nbsp;
     <a href="tutorial.html" style="text-decoration:none;">Tutorial</a><!--&nbsp;&nbsp;&nbsp;
-    <a href="mailto:info@audovia.com" style="text-decoration:none;">Contact Us</a>--> <hr style="height:1px;border-width:0;color:grey;background-color:grey">
+    <a href="mailto:info@audovia.com" style="text-decoration:none;">Contact Us</a>-->
+    <hr style="height:1px;border-width:0;color:grey;background-color:grey">
     </span>
     </div>
-
-
-    <!-- Place this code where you want the badge to render. -->
-	<!--<a href="https://plus.google.com/communities/115182680696167827789?prsrc=3" rel="publisher" target="_blank" style="text-decoration:none;">
-	<img src="https://ssl.gstatic.com/images/icons/gplus-32.png" alt="Google+" style="border:0;width:32px;height:32px;"/>
-    </a>-->
 
     <div style="position: absolute; left: 50%; margin-left: -494px; top: 230px;">
 
       <iframe style="border-style: none;" src="playlist.html" height="330" width="420"></iframe>
 
-      <!--<iframe src="https://player.vimeo.com/video/149954239?title=0&byline=0&portrait=0" width="400" height="308" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>-->
-
     </div>
-
-    <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 460px;">-->
 
     <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 574px; padding: 10px;">
 
@@ -94,17 +80,6 @@
 
       <span class="text"><p>On Microsoft Windows or Apple Macintosh, you can use Oracle's <a class="nounderline" href="https://www.virtualbox.org/" target="_blank" rel="noopener noreferrer">VirtualBox</a> to run a suitable Linux system
       such as <a class="nounderline" href="https://www.ubuntu.com/desktop" target="_blank" rel="noopener noreferrer">Ubuntu</a> (64&#8209;bit) in a virtual machine.</p></span>
-      <!--<hr><span class="text"><p style="margin-bottom: 8px; margin-top: 12px;">On Microsoft Windows, first install
-      <a class="nounderline" href="http://java.com/" target="_blank" rel="noopener noreferrer">Java</a>,
-      then download Audovia from <a class="nounderline" href="https://bintray.com/songbuilder/generic/download_file?file_path=installAudovia-3-3.msi" rel="noopener noreferrer">here</a>.
-      </span>-->
-      <!--
-      <span class="text"><p style="margin-bottom: 4px;"><b>Audovia</b> is an open source application and can be found on <a class="nounderline" href="https://github.com/SongBase/Audovia" target="_blank" rel="noopener noreferrer">GitHub</a>.</p></span>
-      -->
-    <!--</div>
-
-
-    <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 756px; padding: 10px;">-->
 
       <span class="text"><p>The <b>Audovia Interface</b> directory can be used to share
         MIDI, MusicXML and WAV output files with other snappy applications.
@@ -124,14 +99,6 @@
       </span>
 
     </div>
-
-    <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 756px;">
-    <a href="image/SongsFS.png" rel="noopener noreferrer">
-      <img title="Songs"
-	                  alt="Songs" src="image/Songs.png"
-                style="border: 0px solid;" align="left">
-    </a>
-    </div>-->
 
     <div style="width: 550px; background-color: #ffffff;  margin-left: -68px; position: absolute; top: 226px; left: 50%;  border: 8px solid white;">
       <span class="text">
@@ -187,81 +154,16 @@
       target="_blank" rel="noopener noreferrer">here</a> and there are more at <a class="nounderline" href="https://sites.google.com/site/soundfonts4u/"
       target="_blank" rel="noopener noreferrer">Soundfonts 4U</a>.
 	  </p>
-	 <!-- <p>
-	        <em>Support:</em>
-	        <blockquote style="margin-left: 22px; margin-top: -5px;">
-	          <a class="nounderline" href="mailto:info@audovia.com" rel="noopener noreferrer">info@audovia.com</a>
-	        </blockquote>
-	  </p> -->
+
       </span>
     </div>
 
-   <!-- <div style="width: 968px; background-color: #ffffff;  margin-left: -486px; position: absolute; top: 788px; left: 50%;">
-      <span class="text">
-	  <p>
-	  The quality of your music will depend on your choice of instrument for each voice and your choice of soundbank.&nbsp; One good soundbank is available <a class="nounderline" href="https://drive.google.com/folderview?id=0B8XyJFPN233fbmY3WFhMT3djc1E&usp=sharing"
-      target="_blank" rel="noopener noreferrer">here</a> and there are more at <a class="nounderline" href="https://sites.google.com/site/soundfonts4u/"
-      target="_blank" rel="noopener noreferrer">Soundfonts 4U</a>.
-	  </p>
-	  </span>
-	</div> -->
-
-    <!-- changed encoding to UTF-8 -->
     <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1095px; left: 0px; right: 0px;">
 
-    <!--<span class="footer"><em><p style="margin-bottom: 6px;"><b>Audovia</b> is open-source software and can be found on <a class="nounderline" href="https://github.com/SongBase/Audovia" target="_blank" rel="noopener noreferrer">GitHub</a>.</p></em></span>-->
-
       <span class="footer">
-      <em><!--Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.<br><br>-->
-          Copyright &copy; 2017&nbsp;&nbsp; Donald G Gray</em><br><br>&nbsp;
+      <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="https://songbase.github.io/chanter/" target="_blank" rel="noopener noreferrer">Pipe Tunes</a>.<br><br>
+          Copyright &copy; 2017, 2018&nbsp;&nbsp; Donald G Gray</em><br><br>&nbsp;
       </span>
-
-   <!-- <div align="left">
-    <span class="caption"><em>Blog</em></span>
-    <span class="text">
-    <p>
-    </p>
-
-    <p>
-    Do you play the Great Highland Bagpipe?&nbsp; If so, please visit
-    <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.
-    </p>
-    <p>
-    There is a Song Builder community at
-    <a class="nounderline" href="https://plus.google.com/communities/115182680696167827789" target="_blank" rel="noopener noreferrer">Google+</a>.
-    </p>
-
-    <p>
-    &nbsp;
-    </p>
-    </span>
-    </div> -->
-
-    <!-- <div align="left">
-    <span class="caption"><em>Open Discussion</em></span>
-    </div>
-
-      <div id="disqus_thread" align="center" style="width: 600px;"></div>
-	  <script>
-
-	  /**
-	  *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-	  *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-
-	  var disqus_config = function () {
-	  this.page.url = 'http://audovia.com/';  // Replace PAGE_URL with your page's canonical URL variable
-	  this.page.identifier = 'audovia'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-	  };
-
-	  (function() { // DON'T EDIT BELOW THIS LINE
-	  var d = document, s = d.createElement('script');
-	  s.src = '//audovia.disqus.com/embed.js';
-	  s.setAttribute('data-timestamp', +new Date());
-	  (d.head || d.body).appendChild(s);
-	  })();
-	  </script>
-	  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    </div> -->
 
     </div>
   </body>
