--- a/index.html
+++ b/index.html
@@ -53,6 +53,21 @@
                 style="border: 0px solid;">
     </div>
 
+    <div style="position: absolute; left: 50%; margin-left: 400px; top: 36px;">
+                <a href="https://github.com/SongBase/Audovia" target="_blank" rel="noopener noreferrer">
+                <img title="GitHub mark"
+				                alt="GitHub mark" src="image/GitHub-Mark-32px.png"
+                style="border: 0px solid;">
+                </a>
+    </div>
+
+    <div style="position: absolute; left: 50%; margin-left: 454px; top: 36px;">
+    <!-- Place this code where you want the badge to render. -->
+	<a href="https://plus.google.com/communities/115182680696167827789" target="_blank" rel="noopener noreferrer">
+	<img src="https://ssl.gstatic.com/images/icons/gplus-32.png" alt="Google+" style="border:0;width:32px;height:32px;"/>
+    </a>
+    </div>
+
  </div>
 
     <div align="center" style="background: linear-gradient(to right, #8000ff, white, white, #8000ff); width: 972px; position: relative; left: 50%; margin-left: -486px; top: 140px;">
