--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
    <h1><strong>Audovia</strong></h1>
     <div style="position: relative; top: -14px;">
-    <h2><em>Linux application for making music</em></h2>
+    <h2><em>Make music on Linux with this Snappy application</em></h2>
     </div>
 
     <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
