--- a/tutorial.html
+++ b/tutorial.html
@@ -46,12 +46,11 @@
     </div>
 
     <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
-             <!-- <a href="https://uappexplorer.com/app/audovia.songbuilder" target="_blank"> <img title="Audovia on uApp Explorer"
-                alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
-                style="border: 0px solid;"></a> -->
+                <a href="https://snapcraft.io/audovia" target="_blank" rel="noopener noreferrer">
                 <img title="Audovia Icon"
 				                alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
                 style="border: 0px solid;">
+                </a>
     </div>
 
     <div style="position: absolute; left: 50%; margin-left: 414px; top: 36px;">
