--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 
       <span class="footer">
       <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="https://songbase.github.io/chanter/" target="_blank" rel="noopener noreferrer">Pipe Tunes</a>.<br><br>
+          Advertisement - Do you need secondary glazing for your sash windows?&nbsp; If so, please visit <a class="nounderline" href="https://songbase.github.io/GlassShape/" target="_blank" rel="noopener noreferrer">Glass Shutters</a>.<br><br>
           Copyright &copy; 2017, 2018&nbsp;&nbsp; Donald G Gray</em><br><br>&nbsp;
       </span>
 
