--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
     <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1095px; left: 0px; right: 0px;">
 
       <span class="footer">
-      <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="https://songbase.github.io/chanter/" target="_blank" rel="noopener noreferrer">Pipe Tunes</a>.<br><br>
-          Advertisement - Do you need secondary glazing for your sash windows?&nbsp; If so, please visit <a class="nounderline" href="https://songbase.github.io/GlassShape/" target="_blank" rel="noopener noreferrer">Glass Shutters</a>.<br><br>
-          Copyright &copy; 2017, 2018&nbsp;&nbsp; Donald G Gray</em><br><br>&nbsp;
+      <em><!--Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="https://songbase.github.io/chanter/" target="_blank" rel="noopener noreferrer">Pipe Tunes</a>.<br><br>
+          Advertisement - Do you need secondary glazing for your sash windows?&nbsp; If so, please visit <a class="nounderline" href="https://songbase.github.io/GlassShape/" target="_blank" rel="noopener noreferrer">Glass Shutters</a>.<br><br>-->
+          Copyright &copy; 2017, 2018&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
       </span>
 
     </div>
