--- a/demo.html
+++ b/demo.html
@@ -89,7 +89,7 @@
 
       <span class="footer">
       <em><!--Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.<br><br>-->
-          Copyright &copy; 2017&nbsp;&nbsp; Donald G Gray</em><br><br>&nbsp;
+          Copyright &copy; 2017, 2018&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
       </span>
 
     </div>
