--- a/demo.html
+++ b/demo.html
@@ -79,11 +79,19 @@
     </span>
     </div>
 
-    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 240px; left: 0px; right: 0px;">
+    <!--<div align="center" style="width: 968px; margin: auto; position: absolute; top: 240px; left: 0px; right: 0px;">
     <iframe src="https://player.vimeo.com/video/149954239?title=0&byline=0&portrait=0" width="640" height="494" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    </div>
+    </div>-->
 
-    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 780px; left: 0px; right: 0px;">
+<div align="center" style="width: 968px; margin: auto; position: absolute; top: 240px; left: 0px; right: 0px;">
+<video width="700" height="540" controls>
+  <source src="media/audovia-demo.mp4" type="video/mp4">
+
+  Your browser does not support the video tag.
+</video>
+</div>
+
+    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 820px; left: 0px; right: 0px;">
 
     <!--<span class="footer"><em><p style="margin-bottom: 6px;"><b>Audovia</b> is open-source software and can be found on <a class="nounderline" href="https://github.com/SongBase/Audovia" target="_blank" rel="noopener noreferrer">GitHub</a>.</p></em></span>-->
 
