--- a/demo.html
+++ b/demo.html
@@ -96,7 +96,12 @@
     <!--<span class="footer"><em><p style="margin-bottom: 6px;"><b>Audovia</b> is open-source software and can be found on <a class="nounderline" href="https://github.com/SongBase/Audovia" target="_blank" rel="noopener noreferrer">GitHub</a>.</p></em></span>-->
 
       <span class="footer">
-      <em><!--Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://pipetunes.uk/" target="_blank" rel="noopener noreferrer">pipetunes.uk</a>.<br><br>-->
+      <em>
+                We do not collect personal information on this website.&nbsp;
+	            Where we provide links to websites of other organisations, this privacy notice does not cover how that organisation processes personal information.&nbsp;
+	            We encourage you to read the privacy notices on the other websites you visit.
+	            <br>
+          <br>
           Copyright &copy; 2017, 2018&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
       </span>
 
