--- a/tutorial.html
+++ b/tutorial.html
@@ -13,7 +13,7 @@
 
     <meta content="Donald G Gray" name="author">
     <meta content="Linux application for making music" name="description">
-    <meta property="og:image" content="http://audovia.com/image/screenshot.png">
+    <meta property="og:image" content="https://songbase.github.io/image/2018-03-25.png">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia - Tutorial">
     <meta property="og:description" content="Linux application for making music">
