--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     </div>
 
-    <div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 574px; padding: 10px;">
+    <!--<div style="background-color: #f4f4f4; width: 382px; position: absolute; left: 50%; margin-left: -486px; top: 574px; padding: 10px;">
 
       <span class="text"><p>To install <b>Audovia</b> on a Linux <a class="nounderline" href="https://snapcraft.io/docs/core/install" target="_blank" rel="noopener noreferrer">snapd</a> enabled system:</p></span>
       <span class="text"><p>&nbsp;&nbsp;&nbsp;&nbsp; sudo snap install audovia</p></span>
@@ -115,22 +115,45 @@
       </p>
       </span>
 
-    </div>
+    </div>-->
 
     <div style="width: 550px; background-color: #ffffff;  margin-left: -68px; position: absolute; top: 226px; left: 50%;  border: 8px solid white;">
       <span class="text">
-	  <p>
-	  These songs were produced using <b>Audovia</b>, a Linux application which can make music with up to fifteen instrumental voices and a percussion track.</p><p>Instruments can be chosen from the default soundbank of 128&nbsp;instruments or
-	  from any other soundbank of your choice.
+	  <p style="margin-top: 0px; margin-bottom: 16px;">
+	  These songs were produced using <b>Audovia</b>, a Linux application which can make music with up to fifteen instrumental voices and a percussion track.
 	  </p>
 	  <p>
+	  Click on the song name to play or pause and double-click to rewind.
+	  </p>
+	  <p>&nbsp;
+	  </p>
+	  <div align="center">
+	  <p>
+	  <a href="https://snapcraft.io/audovia"
+	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
+	       <button type="button" style="background-color:#9933ff; width:360px; padding:5px; cursor:pointer">
+	               <font face="Open Sans"><big><b>Install Audovia from the Snap Store</b>
+
+	               </big>
+	               </font>
+	       </button>
+    </a>
+	  </p>
+	  </div>
+	  <p>&nbsp;
+	  </p>
+	  <!--<p>
+	  Instruments can be chosen from the default soundbank of 128&nbsp;instruments or
+	  from any other soundbank of your choice.
+	  </p>-->
+	  <p style="margin-top: 0px; margin-bottom: 20px;">
 	  <b>Audovia</b> is great for making background music for videos or backing tracks for playing or singing along to.&nbsp; Even ringtones for your mobile phone.
 	  </p>
-	  <p>
+	  <!--<p>
 	  Songs can be developed, tested and edited very quickly and easily by virtue of the database structure and the JFugue MusicString notation.
 	  </p>
 	  <p>
-	        Notes are specified by their name and octave or by their MIDI value and they may be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves within the MusicString editor<!--as shown in this <a class="nounderline" href="https://vimeo.com/132335980" target="_blank" rel="noopener noreferrer">Demonstration</a>-->.&nbsp;
+	        Notes are specified by their name and octave or by their MIDI value and they may be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves within the MusicString editor--><!--as shown in this <a class="nounderline" href="https://vimeo.com/132335980" target="_blank" rel="noopener noreferrer">Demonstration</a>--><!--.&nbsp;
 	        Durations are expressed as numerical values or by character codes.
 	  </p>
 	  <p>
@@ -167,6 +190,7 @@
 	        </ol>
 	  </p>
 	  <p>
+	  -->
 	  The quality of your music will depend on your choice of instrument for each voice and your choice of soundbank.&nbsp; One good soundbank is available <a class="nounderline" href="https://drive.google.com/folderview?id=0B8XyJFPN233fbmY3WFhMT3djc1E&usp=sharing"
       target="_blank" rel="noopener noreferrer">here</a> and there are more at <a class="nounderline" href="https://sites.google.com/site/soundfonts4u/"
       target="_blank" rel="noopener noreferrer">Soundfonts 4U</a>.
@@ -175,7 +199,7 @@
       </span>
     </div>
 
-    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1095px; left: 0px; right: 0px;">
+    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 590px; left: 0px; right: 0px;">
 
       <span class="footer">
       <em>
