--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 	      href="https://fonts.googleapis.com/css?family=Ubuntu">
 
     <meta content="Donald G Gray" name="author">
-    <meta content="Linux application for making music" name="description">
+    <meta content="Music Making application for Linux" name="description">
     <meta property="og:image" content="https://songbase.github.io/image/2018-03-25.png">
     <meta property="og:image:width" content="686">
     <meta property="og:image:height" content="385">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia">
-    <meta property="og:description" content="Linux application for making music">
+    <meta property="og:description" content="Music Making application for Linux">
     <meta property="og:url" content="https://songbase.github.io/">
 
     <style type="text/css">
@@ -44,35 +44,35 @@
 
    <h1><strong>Audovia</strong></h1>
     <div style="position: relative; top: -14px;">
-    <h2><em>Linux software in the Snap Store</em></h2>
+    <h2><em>Music Making application for Linux</em></h2>
     </div>
 
-    <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
+    <!--<div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
                 <a href="https://snapcraft.io/audovia" target="_blank" rel="noopener noreferrer">
                 <img title="Audovia Icon"
 				                alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
                 style="border: 0px solid;">
                 </a>
-    </div>
+    </div>-->
 
-    <div style="position: absolute; left: 50%; margin-left: 414px; top: 36px;">
+    <!--<div style="position: absolute; left: 50%; margin-left: 414px; top: 36px;">
                 <a href="https://github.com/SongBase/Audovia" target="_blank" rel="noopener noreferrer">
                 <img title="GitHub mark"
 				                alt="GitHub mark" src="image/GitHub-Mark-32px.png"
                 style="border: 0px solid;">
                 </a>
-    </div>
+    </div>-->
 
-    <div style="position: absolute; left: 50%; margin-left: 454px; top: 36px;">
-    <!-- Place this code where you want the badge to render. -->
+    <!--<div style="position: absolute; left: 50%; margin-left: 454px; top: 36px;">
+
 	<a href="https://plus.google.com/communities/115182680696167827789" target="_blank" rel="noopener noreferrer">
 	<img src="https://ssl.gstatic.com/images/icons/gplus-32.png" alt="Google+" style="border:0;width:32px;height:32px;"/>
     </a>
-    </div>
+    </div>-->
 
  </div>
 
-    <div align="center" style="background: linear-gradient(to right, #8000ff, white, white, #8000ff); width: 972px; position: relative; left: 50%; margin-left: -486px; top: 130px;">
+    <div align="center" style="background: linear-gradient(to right, #cb5fc7, white, white, #cb5fc7); width: 972px; position: relative; left: 50%; margin-left: -486px; top: 130px;">
     <span class="text"> <hr style="height:1px;border-width:0;color:grey;background-color:grey">
     <a href="index.html" style="text-decoration:none;"><b>Home</b></a>&nbsp;&nbsp;&nbsp;
     <a href="demo.html" style="text-decoration:none;">Demo</a>&nbsp;&nbsp;&nbsp;
@@ -93,8 +93,8 @@
 </a>
 </div>-->
 
-<div style="position: absolute; left: 50%; margin-left: -486px; top: 206px;">
-<img src="image/flowers.jpg" alt="flowers" height="224" width="972">
+<div style="position: absolute; left: 50%; margin-left: -486px; top: 210px;">
+<img src="image/sm_Sydney_Opera2.jpg" alt="Sydney Opera House" height="214" width="972">
 </div>
 
     <div style="position: absolute; left: 50%; margin-left: -494px; top: 452px;">
@@ -146,7 +146,7 @@
 	  <p>
 	  <a href="https://snapcraft.io/audovia"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
-	       <button type="button" style="background-color:#9933ff; width:360px; padding:5px; cursor:pointer">
+	       <button type="button" style="background-color:#cb5fc7; width:360px; padding:5px; cursor:pointer">
 	               <font face="Open Sans"><big><b>Install Audovia from the Snap Store</b>
 
 	               </big>
