--- a/index.html
+++ b/index.html
@@ -72,15 +72,16 @@
 
  </div>
 
-    <div align="center" style="background: linear-gradient(to right, #cb5fc7, white, white, #cb5fc7); width: 972px; position: relative; left: 50%; margin-left: -486px; top: 130px;">
+    <!--<div align="center" style="background: linear-gradient(to right, #cb5fc7, white, white, #cb5fc7); width: 972px; position: relative; left: 50%; margin-left: -486px; top: 130px;">
     <span class="text"> <hr style="height:1px;border-width:0;color:grey;background-color:grey">
     <a href="index.html" style="text-decoration:none;"><b>Home</b></a>&nbsp;&nbsp;&nbsp;
     <a href="demo.html" style="text-decoration:none;">Demo</a>&nbsp;&nbsp;&nbsp;
-    <a href="tutorial.html" style="text-decoration:none;">Tutorial</a><!--&nbsp;&nbsp;&nbsp;
+    <a href="tutorial.html" style="text-decoration:none;">Tutorial</a>-->
+    <!--&nbsp;&nbsp;&nbsp;
     <a href="mailto:info@audovia.com" style="text-decoration:none;">Contact Us</a>-->
-    <hr style="height:1px;border-width:0;color:grey;background-color:grey">
+    <!--<hr style="height:1px;border-width:0;color:grey;background-color:grey">
     </span>
-    </div>
+    </div>-->
 
 
 <!--<div style="position: absolute; left: 50%; margin-left: -486px; top: 206px;">
@@ -93,11 +94,11 @@
 </a>
 </div>-->
 
-<div style="position: absolute; left: 50%; margin-left: -486px; top: 210px;">
+<div style="position: absolute; left: 50%; margin-left: -486px; top: 135px;">
 <img src="image/sm_Sydney_Opera2.jpg" alt="Sydney Opera House" height="214" width="972">
 </div>
 
-    <div style="position: absolute; left: 50%; margin-left: -494px; top: 452px;">
+    <div style="position: absolute; left: 50%; margin-left: -494px; top: 372px;">
 
       <iframe style="border-style: none;" src="playlist.html" height="330" width="420"></iframe>
 
@@ -132,7 +133,7 @@
 
     </div>-->
 
-    <div style="width: 550px; background-color: #ffffff;  margin-left: -68px; position: absolute; top: 448px; left: 50%;  border: 8px solid white;">
+    <div style="width: 550px; background-color: #ffffff;  margin-left: -68px; position: absolute; top: 368px; left: 50%;  border: 8px solid white;">
       <span class="text">
 	  <p style="margin-top: 0px; margin-bottom: 16px;">
 	  These songs were produced using <b>Audovia</b>, a Linux application which can make music with up to fifteen instrumental voices and a percussion track.
@@ -146,7 +147,7 @@
 	  <p>
 	  <a href="https://snapcraft.io/audovia"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
-	       <button type="button" style="background-color:#cb5fc7; width:360px; padding:5px; cursor:pointer">
+	       <button type="button" style="background-color:#e0e0e0; width:360px; padding:5px; cursor:pointer; color:#551A8B;">
 	               <font face="Open Sans"><big><b>Install Audovia from the Snap Store</b>
 
 	               </big>
@@ -214,7 +215,7 @@
       </span>
     </div>
 
-    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 806px; left: 0px; right: 0px;">
+    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 726px; left: 0px; right: 0px;">
 
       <span class="footer">
       <em>
