--- a/index.html
+++ b/index.html
@@ -135,16 +135,17 @@
 
     <div style="width: 550px; background-color: #ffffff;  margin-left: -68px; position: absolute; top: 368px; left: 50%;  border: 8px solid white;">
       <span class="text">
-	  <p style="margin-top: 0px; margin-bottom: 16px;">
+	<!--  <p style="margin-top: 0px; margin-bottom: 16px;"> -->
+	<p>
 	  These songs were produced using <b>Audovia</b>, a Linux application which can make music with up to fifteen instrumental voices and a percussion track.
 	  </p>
 	  <p>
 	  Click on the song name to play or pause and double-click to rewind.
 	  </p>
-	  <p>&nbsp;
-	  </p>
+<!--	  <p>&nbsp;
+	  </p> -->
 	  <div align="center">
-	  <p>
+	  <p style="margin-top: 22px; margin-bottom: 0px;">
 	  <a href="https://snapcraft.io/audovia"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
 	       <button type="button" style="background-color:#e0e0e0; width:360px; padding:5px; cursor:pointer; color:#551A8B;">
@@ -155,14 +156,26 @@
 	       </button>
     </a>
 	  </p>
-	  </div>
-	  <p>&nbsp;
+	  	  <p style="margin-top: 16px; margin-bottom: 22px;">
+	  	  <a href="https://bintray.com/songbuilder/generic/Audovia"
+	  	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
+	  	       <button type="button" style="background-color:#e0e0e0; width:360px; padding:5px; cursor:pointer; color:#551A8B;">
+	  	               <font face="Open Sans"><big><b>Install Audovia from Bintray (.msi)</b>
+
+	  	               </big>
+	  	               </font>
+	  	       </button>
+	      </a>
 	  </p>
+	  </div>
+	 <!-- <p>&nbsp;
+	  </p> -->
 	  <!--<p>
 	  Instruments can be chosen from the default soundbank of 128&nbsp;instruments or
 	  from any other soundbank of your choice.
 	  </p>-->
-	  <p style="margin-top: 0px; margin-bottom: 20px;">
+	 <!-- <p style="margin-top: 0px; margin-bottom: 20px;"> -->
+	 <p>
 	  <b>Audovia</b> is great for making background music for videos or backing tracks for playing or singing along to.&nbsp; Even ringtones for your mobile phone.
 	  </p>
 	  <!--<p>
