--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 	       </button>
     </a>
 	  </p>
-	  	  <p style="margin-top: 16px; margin-bottom: 22px;">
+	  	 <!-- <p style="margin-top: 16px; margin-bottom: 22px;">
 	  	  <a href="https://bintray.com/songbuilder/generic/Audovia"
 	  	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
 	  	       <button type="button" style="background-color:#e0e0e0; width:360px; padding:5px; cursor:pointer; color:#551A8B;">
@@ -166,6 +166,9 @@
 	  	               </font>
 	  	       </button>
 	      </a>
+	  </p>-->
+	  <p>
+	  &nbsp;
 	  </p>
 	  </div>
 	 <!-- <p>&nbsp;
