--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
 <!--	  <p>&nbsp;
 	  </p> -->
 	  <div align="center">
-	  <p style="margin-top: 18px; margin-bottom: 20px;">
+	  <p style="margin-top: 16px; margin-bottom: 18px;">
 
 	  <a href="https://snapcraft.io/audovia"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
 	       <button type="button" style="background-color:#e0e0e0; width:360px; padding:5px; cursor:pointer; color:#551A8B;">
-	               <font face="Open Sans"><big><b>Install Audovia from the Snap Store</b>
+	               <font style="font-family: Open Sans; font-size: 16px;"><b>Install Audovia from the Snap Store</b>
 
-	               </big>
+
 	               </font>
 	       </button>
     </a>
@@ -230,7 +230,7 @@
       </span>
     </div>
 
-    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 670px; left: 0px; right: 0px;">
+    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 665px; left: 0px; right: 0px;">
 
       <span class="footer">
       <em>
