--- a/playlist.html
+++ b/playlist.html
@@ -15,8 +15,9 @@
     <meta property="og:title" content="Playlist">
     <meta property="og:description" content="Audio playlist where the song titles change colour when they are played or paused.">
     <style type="text/css">
-      span.composer {color: #817F73; font-family: Open Sans; font-size: 16px;}
-      span.song {color: #551A8B; cursor: pointer; font-family: Open Sans; font-size: 16px;}
+      span.composer {color: #817F73; font-family: Open Sans; font-size: 16px; line-height: 150%;}
+      span.song {color: #551A8B; cursor: pointer; font-family: Open Sans; font-size: 16px; line-height: 150%;}
+      td {padding: 3px 0px 0px 5px;}
     </style>
   </head>
 
@@ -45,7 +46,7 @@
     ']}';
 
     var obj = JSON.parse(text);
-    var table_content = '<table style="background-color: #f4f4f4; border-style: solid; border-width: 8px; border-color: #f4f4f4;" width="400" cellpadding="2"><tbody>';
+    var table_content = '<table style="background-color: #f4f4f4; border-style: solid; border-width: 8px; border-color: #f4f4f4;" width="400"><tbody>';
     var audio_content = '';
 
     for (i = 0; i < obj.songs.length; i++)
