--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     <h2><em>Music Making application for Linux</em></h2>
     </div>
 
-    <!--<div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
+   <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
                 <a href="https://snapcraft.io/audovia" target="_blank" rel="noopener noreferrer">
                 <img title="Audovia Icon"
 				                alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
                 style="border: 0px solid;">
                 </a>
-    </div>-->
+    </div>
 
     <!--<div style="position: absolute; left: 50%; margin-left: 414px; top: 36px;">
                 <a href="https://github.com/SongBase/Audovia" target="_blank" rel="noopener noreferrer">
