--- a/demo.html
+++ b/demo.html
@@ -42,7 +42,7 @@
    <h1><strong>Audovia</strong></h1>
     <!-- <h2><em>database application for making music using JFugue MusicStrings</em></h2> -->
     <div style="position: relative; top: -14px;">
-    <h2><em>Linux software in the Snap Store</em></h2>
+    <h2><em>Music Making application for Linux</em></h2>
     </div>
 
     <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
@@ -53,7 +53,7 @@
                 </a>
     </div>
 
-    <div style="position: absolute; left: 50%; margin-left: 414px; top: 36px;">
+    <!--<div style="position: absolute; left: 50%; margin-left: 414px; top: 36px;">
                 <a href="https://github.com/SongBase/Audovia" target="_blank" rel="noopener noreferrer">
                 <img title="GitHub mark"
 				                alt="GitHub mark" src="image/GitHub-Mark-32px.png"
@@ -62,11 +62,11 @@
     </div>
 
     <div style="position: absolute; left: 50%; margin-left: 454px; top: 36px;">
-    <!-- Place this code where you want the badge to render. -->
+
 	<a href="https://plus.google.com/communities/115182680696167827789" target="_blank" rel="noopener noreferrer">
 	<img src="https://ssl.gstatic.com/images/icons/gplus-32.png" alt="Google+" style="border:0;width:32px;height:32px;"/>
     </a>
-    </div>
+    </div>-->
 
  </div>
 
