--- a/index.html
+++ b/index.html
@@ -230,7 +230,15 @@
       </span>
     </div>
 
-    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 665px; left: 0px; right: 0px;">
+<div align="center" style="width: 968px; margin: auto; position: absolute; top: 655px; left: 0px; right: 0px;">
+<video width="686" height="514" controls>
+  <source src="media/QuickStart.mp4" type="video/mp4">
+
+  Your browser does not support the video tag.
+</video>
+</div>
+
+    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1200px; left: 0px; right: 0px;">
 
       <span class="footer">
       <em>
