--- a/index.html
+++ b/index.html
@@ -229,12 +229,34 @@
       </span>
     </div>
 
-<div align="center" style="width: 968px; margin: auto; position: absolute; top: 655px; left: 0px; right: 0px;">
-<video width="686" height="514" controls>
+<!--<div align="center" style="width: 968px; margin: auto; position: absolute; top: 655px; left: 0px; right: 0px;">-->
+<div style="width: 968px; margin: auto; position: absolute; top: 655px; left: 0px; right: 0px;">
+<video width="686" height="514" controls style="float: left; margin-right: 25px;">
   <source src="media/QuickStart.mp4" type="video/mp4">
 
   Your browser does not support the video tag.
 </video>
+<span class="text">
+<p>
+<br>
+The video shows a song being imported from an archive file.
+</p>
+<p>
+The structure of the song is displayed as a tree view before it is played back using the default soundbank.
+</p>
+<p>
+The notes are specified by their name and octave, and their durations are specified either by a character code or by a numeric value preceded by a /.
+</p>
+<p>
+Notes can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves within the MusicString editor.
+</p>
+<p>
+You can export songs to MIDI, MusicXML and WAV files.
+</p>
+<p>
+The songs here were produced by opening the WAV files in Audacity and then exporting to MP3.
+</p>
+</span>
 </div>
 
     <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1200px; left: 0px; right: 0px;">
