--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ Notes can be entered manually or by picking from graphic Treble, Alto, Tenor and
 You can export songs to MIDI, MusicXML and WAV files.
 </p>
 <p>
-The songs here were produced by opening the WAV files in Audacity and then exporting to MP3.
+The songs here were produced by opening the WAV files in <a class="nounderline" href="https://www.audacityteam.org/" target="_blank" rel="noopener noreferrer">Audacity</a> and then exporting to MP3.
 </p>
 </span>
 </div>
