--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </a>
     </div>
 
-    <div style="position: absolute; left: 50%; margin-left: 414px; top: 36px;">
+    <!--<div style="position: absolute; left: 50%; margin-left: 414px; top: 36px;">
                 <a href="https://github.com/SongBase/Audovia" target="_blank" rel="noopener noreferrer">
                 <img title="GitHub mark"
 				                alt="GitHub mark" src="image/GitHub-Mark-32px.png"
@@ -67,7 +67,7 @@
 	<a href="https://plus.google.com/communities/115182680696167827789" target="_blank" rel="noopener noreferrer">
 	<img src="https://ssl.gstatic.com/images/icons/gplus-32.png" alt="Google+" style="border:0;width:32px;height:32px;"/>
     </a>
-    </div>
+    </div>-->
 
  </div>
 
