--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 </a>
 </div>-->
 
-<div style="position: absolute; left: 50%; margin-left: -486px; top: 135px;">
+<!--<div style="position: absolute; left: 50%; margin-left: -486px; top: 135px;">
 <img src="image/sm_Sydney_Opera2.jpg" alt="Sydney Opera House" height="214" width="972">
-</div>
+</div>-->
 
-    <div style="position: absolute; left: 50%; margin-left: -494px; top: 372px;">
+    <div style="position: absolute; left: 50%; margin-left: -494px; top: 152px;">
 
       <iframe style="border-style: none;" src="playlist.html" height="270" width="440"></iframe>
 
@@ -132,7 +132,7 @@
 
     </div>-->
 
-    <div style="width: 530px; background-color: #ffffff;  margin-left: -48px; position: absolute; top: 368px; left: 50%;  border: 8px solid white;">
+    <div style="width: 530px; background-color: #ffffff;  margin-left: -48px; position: absolute; top: 148px; left: 50%;  border: 8px solid white;">
       <span class="text">
 	<!--  <p style="margin-top: 0px; margin-bottom: 16px;"> -->
 	<p>
@@ -230,7 +230,7 @@
     </div>
 
 <!--<div align="center" style="width: 968px; margin: auto; position: absolute; top: 655px; left: 0px; right: 0px;">-->
-<div style="width: 968px; margin: auto; position: absolute; top: 655px; left: 0px; right: 0px;">
+<div style="width: 968px; margin: auto; position: absolute; top: 445px; left: 0px; right: 0px;">
 <video width="686" height="514" controls style="float: left; margin-right: 25px;">
   <source src="media/QuickStart.mp4" type="video/mp4">
 
@@ -259,7 +259,7 @@ The songs here were produced by opening the WAV files in <a class="nounderline" 
 </span>
 </div>
 
-    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1200px; left: 0px; right: 0px;">
+    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1000px; left: 0px; right: 0px;">
 
       <span class="footer">
       <em>
