--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 </video>
 <span class="text">
 <p>
-<br>
+<!--<br>-->
 The video shows a song being imported from an archive file.
 </p>
 <p>
@@ -252,7 +252,7 @@ The notes are specified by their name and octave, and their durations are specif
 Notes can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves within the MusicString editor.
 </p>
 <p>
-You can export songs to MIDI, MusicXML and WAV files.
+You can export songs to MIDI and WAV files for input to music processing and music publishing applications.
 </p>
 <p>
 The songs here were produced by opening the WAV files in <a class="nounderline" href="https://www.audacityteam.org/" target="_blank" rel="noopener noreferrer">Audacity</a> and then exporting to MP3.
