--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 	  <div align="center">
 	  <p style="margin-top: 16px; margin-bottom: 18px;">
 
-	  <a href="https://snapcraft.io/audovia"
+	  <a href="https://snapcraft.io/audovia-classic"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
 	       <button type="button" style="background-color:#e0e0e0; width:330px; padding:5px; cursor:pointer; color:#551A8B;">
 	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia from the Snap Store</b>
@@ -246,7 +246,7 @@ The video shows a song being imported from an archive file.
 The structure of the song is displayed as a tree view before it is played back using the default soundbank.
 </p>
 <p>
-The notes are specified by their name and octave, and their durations are specified either by a character code or by a numeric value preceded by a /.
+The notes are specified by their name and octave, and their durations are specified either by a character code or by a numeric value.
 </p>
 <p>
 Notes can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves within the MusicString editor.
