--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 
 	  <a href="https://snapcraft.io/audovia-classic"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
-	       <button type="button" style="background-color:#e0e0e0; width:330px; padding:5px; cursor:pointer; color:#551A8B;">
-	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia from the Snap Store</b>
+	       <button type="button" style="background-color:#e0e0e0; width:340px; padding:5px; cursor:pointer; color:#551A8B;">
+	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia 4.0 from the Snap Store</b>
 
 
 	               </font>
