--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
    <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
-                <a href="https://snapcraft.io/audovia" target="_blank" rel="noopener noreferrer">
+                <a href="https://snapcraft.io/audovia-classic" target="_blank" rel="noopener noreferrer">
                 <img title="Audovia Icon"
 				                alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
                 style="border: 0px solid;">
