--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 	      href="https://fonts.googleapis.com/css?family=Ubuntu">
 
     <meta content="Donald G Gray" name="author">
-    <meta content="Music Making application for Linux" name="description">
+    <meta content="Music Making application for Linux and Windows" name="description">
     <meta property="og:image" content="https://songbase.github.io/image/2018-03-25.png">
     <meta property="og:image:width" content="686">
     <meta property="og:image:height" content="385">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia">
-    <meta property="og:description" content="Music Making application for Linux">
+    <meta property="og:description" content="Music Making application for Linux and Windows">
     <meta property="og:url" content="https://songbase.github.io/">
 
     <style type="text/css">
@@ -44,7 +44,7 @@
 
    <h1><strong>Audovia</strong></h1>
     <div style="position: relative; top: -14px;">
-    <h2><em>Music Making application for Linux</em></h2>
+    <h2><em>Music Making application for Linux and Windows</em></h2>
     </div>
 
    <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
@@ -99,7 +99,7 @@
 
     <div style="position: absolute; left: 50%; margin-left: -494px; top: 152px;">
 
-      <iframe style="border-style: none;" src="playlist.html" height="270" width="440"></iframe>
+      <iframe style="border-style: none;" src="playlist.html" height="340" width="440"></iframe>
 
     </div>
 
@@ -136,10 +136,10 @@
       <span class="text">
 	<!--  <p style="margin-top: 0px; margin-bottom: 16px;"> -->
 	<p>
-	  These songs were produced using <b>Audovia</b>, a Linux application which can make music with up to fifteen instrumental voices and a percussion track.
+	  These songs were produced using <b>Audovia</b>, a music application with up to fifteen instrumental voices and a percussion track.
 	  </p>
 	  <p>
-	  Click on the song name to play or pause and double-click to rewind.
+	  Click on a song to play or pause and double-click to rewind.
 	  </p>
 <!--	  <p>&nbsp;
 	  </p> -->
@@ -148,13 +148,20 @@
 
 	  <a href="https://snapcraft.io/audovia-classic"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
-	       <button type="button" style="background-color:#e0e0e0; width:340px; padding:5px; cursor:pointer; color:#551A8B;">
-	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia 4.0 from the Snap Store</b>
-
-
+	       <button type="button" style="background-color:#e0e0e0; width:220px; padding:5px; cursor:pointer; color:#551A8B;">
+	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia for Linux</b>
 	               </font>
 	       </button>
-    </a>
+      </a>
+      &nbsp;&nbsp;
+	  <a href="https://sourceforge.net/projects/songbuilder/files/Audovia-4-0-1.msi/download"
+	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
+	       <button type="button" style="background-color:#e0e0e0; width:240px; padding:5px; cursor:pointer; color:#551A8B;">
+	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia for Windows</b>
+	               </font>
+	       </button>
+      </a>
+
 	  </p>
 	  	 <!-- <p style="margin-top: 16px; margin-bottom: 22px;">
 	  	  <a href="https://bintray.com/songbuilder/generic/Audovia"
@@ -227,11 +234,16 @@
       target="_blank" rel="noopener noreferrer">Soundfonts 4U</a>.
 	  </p>
 
+	  <p>
+	  If you are using Windows Sandbox to test <b>Audovia</b> you will need to install the Liberation fonts manually.&nbsp;
+	  These can be found in: C:\Program&nbsp;Files\Donald&nbsp;G&nbsp;Gray\Audovia\fonts\.
+	  </p>
+
       </span>
     </div>
 
 <!--<div align="center" style="width: 968px; margin: auto; position: absolute; top: 655px; left: 0px; right: 0px;">-->
-<div style="width: 968px; margin: auto; position: absolute; top: 445px; left: 0px; right: 0px;">
+<div style="width: 968px; margin: auto; position: absolute; top: 500px; left: 0px; right: 0px;">
 <video width="686" height="514" controls style="float: left; margin-right: 25px;">
   <source src="media/QuickStart.mp4" type="video/mp4">
 
@@ -260,7 +272,7 @@ The songs here were produced by opening the WAV files in <a class="nounderline" 
 </span>
 </div>
 
-    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1000px; left: 0px; right: 0px;">
+    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1055px; left: 0px; right: 0px;">
 
       <span class="footer">
       <em>
