--- a/index.html
+++ b/index.html
@@ -236,14 +236,18 @@
 
 	  <p>
 	  If you are using Windows Sandbox to test <b>Audovia</b> you will need to install the Liberation fonts manually.&nbsp;
-	  These can be found in: C:\Program&nbsp;Files\Donald&nbsp;G&nbsp;Gray\Audovia\fonts\.
+	  These can be found in:
+	  </p>
+
+	  <p style="text-indent:25px;">
+	  C:\Program&nbsp;Files\Donald&nbsp;G&nbsp;Gray\Audovia\fonts\.
 	  </p>
 
       </span>
     </div>
 
 <!--<div align="center" style="width: 968px; margin: auto; position: absolute; top: 655px; left: 0px; right: 0px;">-->
-<div style="width: 968px; margin: auto; position: absolute; top: 500px; left: 0px; right: 0px;">
+<div style="width: 968px; margin: auto; position: absolute; top: 505px; left: 0px; right: 0px;">
 <video width="686" height="514" controls style="float: left; margin-right: 25px;">
   <source src="media/QuickStart.mp4" type="video/mp4">
 
