--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 	  </p>
 
 	  <p style="text-indent:25px;">
-	  C:\Program&nbsp;Files\Donald&nbsp;G&nbsp;Gray\Audovia\fonts\.
+	  C:\Program&nbsp;Files\Donald&nbsp;G&nbsp;Gray\Audovia\fonts\
 	  </p>
 
       </span>
