--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@
       <span class="text">
 	<!--  <p style="margin-top: 0px; margin-bottom: 16px;"> -->
 	<p>
-	  These songs were produced using <b>Audovia</b>, a music application with up to fifteen instrumental voices and a percussion track.
+	  These songs were produced using <b>Audovia</b>, a music application with up to fifteen instrumental voices and a percussion track.&nbsp;
+	  See <a class="nounderline" href="https://songbase.github.io/doc/AudoviaDocumentation-4-0.pdf"
+	         target="_blank" rel="noopener noreferrer">Documentation</a>.
 	  </p>
 	  <p>
 	  Click on a song to play or pause and double-click to rewind.
@@ -185,7 +187,7 @@
 	 <!-- <p style="margin-top: 0px; margin-bottom: 20px;"> -->
 	 <p>
 	  <b>Audovia</b> is great for making background music for videos or backing tracks for playing or singing along to.&nbsp;
-	  Even <a class="nounderline" href="https://drive.google.com/drive/folders/1A1MdhX_gnX7xYDk90ybHfZzugBut22m4?usp=sharing"target="_blank" rel="noopener noreferrer">ringtones</a> for your mobile phone.
+	  Even <a class="nounderline" href="https://drive.google.com/drive/folders/1A1MdhX_gnX7xYDk90ybHfZzugBut22m4?usp=sharing" target="_blank" rel="noopener noreferrer">ringtones</a> for your mobile phone.
 	  </p>
 	  <!--<p>
 	  Songs can be developed, tested and edited very quickly and easily by virtue of the database structure and the JFugue MusicString notation.
