--- a/index.html
+++ b/index.html
@@ -163,20 +163,7 @@
 	               </font>
 	       </button>
       </a>
-
 	  </p>
-	  	 <!-- <p style="margin-top: 16px; margin-bottom: 22px;">
-	  	  <a href="https://bintray.com/songbuilder/generic/Audovia"
-	  	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
-	  	       <button type="button" style="background-color:#e0e0e0; width:360px; padding:5px; cursor:pointer; color:#551A8B;">
-	  	               <font face="Open Sans"><big><b>Install Audovia from Bintray (.msi)</b>
-
-	  	               </big>
-	  	               </font>
-	  	       </button>
-	      </a>
-	  </p>-->
-
 	  </div>
 	 <!-- <p>&nbsp;
 	  </p> -->
@@ -236,14 +223,29 @@
       target="_blank" rel="noopener noreferrer">Soundfonts 4U</a>.
 	  </p>
 
-	  <p>
+	  <!--<p>
 	  If you are using Windows Sandbox to test <b>Audovia</b> you will need to install the Liberation fonts manually.&nbsp;
 	  These can be found in:
 	  </p>
 
 	  <p style="text-indent:25px;">
 	  C:\Program&nbsp;Files\Donald&nbsp;G&nbsp;Gray\Audovia\fonts\
+	  </p>-->
+
+
+	  <div align="center">
+	  <p style="margin-top: 30px; margin-bottom: 18px;">
+
+	  <a href="https://www.facebook.com/Audovia-2383657775293944/reviews/"
+	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
+	       <button type="button" style="background-color:#e0e0e0; width:220px; padding:5px; cursor:pointer; color:#551A8B;">
+	               <font style="font-family: Open Sans; font-size: 15px;"><b>Reviews on Facebook</b>
+	               </font>
+	       </button>
+      </a>
+
 	  </p>
+	  </div>
 
       </span>
     </div>
