--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 	      href="https://fonts.googleapis.com/css?family=Ubuntu">
 
     <meta content="Donald G Gray" name="author">
-    <meta content="Music Making application for Linux and Windows" name="description">
+    <meta content="Music Making application for Linux" name="description">
     <meta property="og:image" content="https://songbase.github.io/image/2018-03-25.png">
     <meta property="og:image:width" content="686">
     <meta property="og:image:height" content="385">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia">
-    <meta property="og:description" content="Music Making application for Linux and Windows">
+    <meta property="og:description" content="Music Making application for Linux">
     <meta property="og:url" content="https://songbase.github.io/">
 
     <style type="text/css">
@@ -44,7 +44,7 @@
 
    <h1><strong>Audovia</strong></h1>
     <div style="position: relative; top: -14px;">
-    <h2><em>Music Making application for Linux and Windows</em></h2>
+    <h2><em>Music Making application for Linux</em></h2>
     </div>
 
    <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
@@ -155,14 +155,14 @@
 	               </font>
 	       </button>
       </a>
-      &nbsp;&nbsp;
+      <!--&nbsp;&nbsp;
 	  <a href="https://sourceforge.net/projects/songbuilder/files/Audovia-4-0-1.msi/download"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
 	       <button type="button" style="background-color:#e0e0e0; width:240px; padding:5px; cursor:pointer; color:#551A8B;">
 	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia for Windows</b>
 	               </font>
 	       </button>
-      </a>
+      </a>-->
 	  </p>
 	  </div>
 	 <!-- <p>&nbsp;
