--- a/index.html
+++ b/index.html
@@ -136,9 +136,10 @@
       <span class="text">
 	<!--  <p style="margin-top: 0px; margin-bottom: 16px;"> -->
 	<p>
-	  These songs were produced using <b>Audovia</b>, a music application with up to fifteen instrumental voices and a percussion track.&nbsp;
+	  These songs were produced using <b>Audovia</b>, a music application with up to fifteen instrumental voices and a percussion track.
+	  <!--&nbsp;
 	  See <a class="nounderline" href="https://songbase.github.io/doc/AudoviaDocumentation-4-0.pdf"
-	         target="_blank" rel="noopener noreferrer">Documentation</a>.
+	         target="_blank" rel="noopener noreferrer">Documentation</a>.-->
 	  </p>
 	  <p>
 	  Click on a song to play or pause and double-click to rewind.
@@ -236,10 +237,10 @@
 	  <div align="center">
 	  <p style="margin-top: 30px; margin-bottom: 18px;">
 
-	  <a href="https://www.facebook.com/Audovia-2383657775293944/reviews/"
+	  <a href="https://songbase.github.io/doc/AudoviaDocumentation-4-0.pdf"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
 	       <button type="button" style="background-color:#e0e0e0; width:220px; padding:5px; cursor:pointer; color:#551A8B;">
-	               <font style="font-family: Open Sans; font-size: 15px;"><b>Reviews on Facebook</b>
+	               <font style="font-family: Open Sans; font-size: 15px;"><b>Audovia Documentation</b>
 	               </font>
 	       </button>
       </a>
