--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <span class="text">
 	<!--  <p style="margin-top: 0px; margin-bottom: 16px;"> -->
 	<p>
-	  These songs were produced using <b>Audovia</b>, a music application with up to fifteen instrumental voices and a percussion track.
+	  These songs were produced using <b>Audovia</b>, a music making application with up to fifteen instrumental voices and a percussion track.
 	  <!--&nbsp;
 	  See <a class="nounderline" href="https://songbase.github.io/doc/AudoviaDocumentation-4-0.pdf"
 	         target="_blank" rel="noopener noreferrer">Documentation</a>.-->
@@ -152,7 +152,7 @@
 	  <a href="https://snapcraft.io/audovia-classic"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
 	       <button type="button" style="background-color:#e0e0e0; width:220px; padding:5px; cursor:pointer; color:#551A8B;">
-	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia for Linux</b>
+	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia on Linux</b>
 	               </font>
 	       </button>
       </a>
