--- a/index.html
+++ b/index.html
@@ -156,14 +156,14 @@
 	               </font>
 	       </button>
       </a>
-      <!--&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;
 	  <a href="https://sourceforge.net/projects/songbuilder/files/Audovia-4-0-1.msi/download"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
 	       <button type="button" style="background-color:#e0e0e0; width:240px; padding:5px; cursor:pointer; color:#551A8B;">
-	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia for Windows</b>
+	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia on Windows</b>
 	               </font>
 	       </button>
-      </a>-->
+      </a>
 	  </p>
 	  </div>
 	 <!-- <p>&nbsp;
