--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 	  <a href="https://snapcraft.io/audovia-classic"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
-	       <button type="button" style="background-color:#e0e0e0; width:220px; padding:5px; cursor:pointer; color:#551A8B;">
+	       <button type="button" style="background-color:#e0e0e0; width:240px; padding:5px; cursor:pointer; color:#551A8B;">
 	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia on Linux</b>
 	               </font>
 	       </button>
@@ -239,8 +239,16 @@
 
 	  <a href="https://songbase.github.io/doc/AudoviaDocumentation-4-0.pdf"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
-	       <button type="button" style="background-color:#e0e0e0; width:220px; padding:5px; cursor:pointer; color:#551A8B;">
+	       <button type="button" style="background-color:#e0e0e0; width:240px; padding:5px; cursor:pointer; color:#551A8B;">
 	               <font style="font-family: Open Sans; font-size: 15px;"><b>Audovia Documentation</b>
+	               </font>
+	       </button>
+      </a>
+      &nbsp;&nbsp;&nbsp;&nbsp;
+	  <a href="https://groups.io/g/audovia"
+	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
+	       <button type="button" style="background-color:#e0e0e0; width:240px; padding:5px; cursor:pointer; color:#551A8B;">
+	               <font style="font-family: Open Sans; font-size: 15px;"><b>Audovia Discussion Group</b>
 	               </font>
 	       </button>
       </a>
