--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 	       </button>
       </a>
       &nbsp;&nbsp;&nbsp;&nbsp;
-	  <a href="https://groups.io/g/audovia"
+	  <a href="https://groups.io/g/audovia/topics"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
 	       <button type="button" style="background-color:#e0e0e0; width:240px; padding:5px; cursor:pointer; color:#551A8B;">
 	               <font style="font-family: Open Sans; font-size: 15px;"><b>Audovia Discussion Group</b>
