--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 	      href="https://fonts.googleapis.com/css?family=Ubuntu">
 
     <meta content="Donald G Gray" name="author">
-    <meta content="Music Making application for Linux and Windows" name="description">
+    <meta content="Music Making application for Classical Musicians" name="description">
     <meta property="og:image" content="https://songbase.github.io/image/2018-03-25.png">
     <meta property="og:image:width" content="686">
     <meta property="og:image:height" content="385">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia">
-    <meta property="og:description" content="Music Making application for Linux and Windows">
+    <meta property="og:description" content="Music Making application for Classical Musicians">
     <meta property="og:url" content="https://songbase.github.io/">
 
     <style type="text/css">
@@ -42,9 +42,9 @@
 
 <div style="position: absolute; top: 0px; width: 100%; height: 140px;">
 
-   <h1><strong>Audovia</strong></h1>
+   <h1><strong>Audovia Classic</strong></h1>
     <div style="position: relative; top: -14px;">
-    <h2><em>Music Making application for Linux and Windows</em></h2>
+    <h2><em>Music Making application for Classical Musicians</em></h2>
     </div>
 
    <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
