--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <title lang="en-gb">Audovia</title>
+    <title lang="en-gb">Audovia Classic</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
 
     <link rel="stylesheet"
@@ -17,7 +17,7 @@
     <meta property="og:image:width" content="686">
     <meta property="og:image:height" content="385">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Audovia">
+    <meta property="og:title" content="Audovia Classic">
     <meta property="og:description" content="Music Making application for Classical Musicians">
     <meta property="og:url" content="https://songbase.github.io/">
 
